--- a/templates/base.html
+++ b/templates/base.html
@@ -141,5 +141,8 @@
       crossorigin="anonymous"
     ></script>
     <script src="{% static 'js/script.js' %}"></script>
+
+    {% block extras %}
+    {% endblock %}
   </body>
 </html>
