--- a/about/templates/about/about.html
+++ b/about/templates/about/about.html
@@ -7,9 +7,9 @@
   <div class="row">
     <div class="col-12 col-md-4 text-center">
       {% if "placeholder" in about.image.url %}
-      <img src="{% static 'images/nobody.jpg' %}" width="75%">
+      <img src="{% static 'images/nobody.jpg' %}" class="scale-profile">
       {% else %}
-      <img src="{{ about.profile_image.url }}" width="75%" alt="{{ about.title }}">
+      <img src="{{ about.profile_image.url }}" class="scale-profile" alt="{{ about.title }}">
       {% endif %}
     </div>
     <div class="col-12 col-md-8">
